添加数据库配置文件

--- a/2018DMT/config.json
+++ b/2018DMT/config.json
@@ -1,4 +1,10 @@
 {
   "Wwwroot": "view\\wwwroot\\University\\",
-  "Port": 80
+  "Port": 80,
+  "DbInfo": {
+    "EmailVerifyDb": "data\\db\\emailverify.db",
+    "EmailVerifyDbType": "sqlite3",
+    "LoginDb": "data\\db\\login.db",
+    "LoginDbType": "sqlite3"
+  }
 }
