--- a/2018DMT/config.json
+++ b/2018DMT/config.json
@@ -5,6 +5,8 @@
     "EmailVerifyDb": "data\\db\\emailverify.db",
     "EmailVerifyDbType": "sqlite3",
     "LoginDb": "data\\db\\login.db",
-    "LoginDbType": "sqlite3"
+    "LoginDbType": "sqlite3",
+    "JobDb": "data\\db\\Job.db",
+    "JobDbType": "sqlite3"
   }
 }
