异步多线程加载配置

--- a/2018DMT/config.json
+++ b/2018DMT/config.json
@@ -10,5 +10,6 @@
     "JobDbType": "sqlite3",
     "UserDb": "data\\db\\user.db",
     "UserDbType": "sqlite3"
-  }
+  },
+  "JobTypeInfoFile": "data\\jobtypes.js"
 }
