简历数据库使用事务提高性能

--- a/2018DMT/config.json
+++ b/2018DMT/config.json
@@ -29,5 +29,6 @@
     "GoldDbType": "sqlite3"
     
   },
-  "JobTypeInfoFile": "data\\jobtypes.js"
+  "JobTypeInfoFile": "data\\jobtypes.js",
+  "DbTransCommitTime": 500
 }
